added cloudinary and fixed schema errors

--- a/.env
+++ b/.env
@@ -3,3 +3,8 @@ PORT = 8000
 MONGODB_URL = mongodb+srv://nigarsg:nigar123@cluster0.uqips.mongodb.net/glmflix?retryWrites=true&w=majority&appName=Cluster0
 
 JWT_SECRET = orpvz0B6yYmOBlJZ
+
+CLOUDINARY_CLOUD_NAME = da1lrlby1
+CLOUDINARY_API_KEY = 535748474377892
+CLOUDINARY_API_SECRET = CMF03aAhf8aHkA08tXhS8R3kg8M
+
